# beads_rust

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  GAP_ANALYSIS_MASTER_REPORT.md  README.md  UPGRADE_LOG.md  build.rs  install.sh
.beads/: issues.jsonl
.githooks/: README.md  pre-commit
.github/: action-pins.jsonl
.github/workflows/: audit.yml  ci.yml  conformance.yml  doctor.yml  e2e-full.yml  notify-acfs.yml  release.yml  update-package-manifests.yml
agent_baseline/examples/: list_limit3.json  list_limit3.toon  ready.json  ready.toon  show_one.json  show_one.toon  version.json
agent_baseline/help/: br_help.txt  br_schema_help.txt
agent_baseline/schemas/: schema_all.json  schema_error.json  schema_issue_details.json
benches/: storage_perf.rs
docs/: AGENT_INTEGRATION.md  ARTIFACT_LOG_SCHEMA.md  BD_VS_BR.md  CI_SUPPLY_CHAIN.md  CLI_REFERENCE.md  COORDINATION_EVIDENCE.md  E2E_COVERAGE_MATRIX.md  JSONL_COMPATIBILITY.md  SNAPSHOT_TESTING.md  SWARM_SCALE_TUNING.md  SYNC_SAFETY.md  TESTING_GUIDELINES.md  TEST_HARNESS.md  WRITE_COMBINING_QUEUE_DESIGN.md  audit_bd_to_br_2026_05_09.md  audit_forced_cycle_close_2026_05_09.md  audit_id_pinning_2026_05_09.md  snapshot_review_2026_05_09.md
docs/agent/: AGENT_FRIENDLINESS_REPORT.md  EXAMPLES.md  ROBOT_MODE.md  SCHEMA.md
docs/operations/: UPGRADE_LOG.md
docs/reliability/: HEALTH_CONTRACT.md
packaging/aur/: PKGBUILD
packaging/homebrew/: br.rb
packaging/scoop/: br.json
scripts/: activate-dev-local-patch.sh  deactivate-dev-local-patch.sh  generate_json_baseline.sh  verify-notify-acfs-workflow.sh  verify-release-workflow-fragments.sh  verify-workflow-action-pins.sh
scripts/test/: import_integrity_current_jsonl.sh
src/: cache.rs  close_policy.rs  coordination.rs  health.rs  inheritance.rs  lib.rs  logging.rs  main.rs  policy.rs  shutdown.rs  write_combining.rs
src/cli/: mod.rs
src/cli/commands/: admin.rs  agents.rs  audit.rs  blocked.rs  capabilities.rs  changelog.rs  close.rs  comments.rs  config.rs  coordination.rs  count.rs  create.rs  custom_status.rs  defer.rs  delete.rs  dep.rs  doctor.rs  epic.rs  export.rs  federation.rs  formula.rs  gate.rs  graph.rs  history.rs  hooks.rs  import.rs  info.rs  init.rs  label.rs  lint.rs  list.rs  memory.rs  merge_slot.rs  mod.rs  orphans.rs  prime.rs  q.rs  query.rs  quickstart.rs  ready.rs  (+18 more)
src/config/: mod.rs  routing.rs
src/error/: mod.rs  structured.rs
src/format/: csv.rs  output.rs  rich.rs  syntax.rs  text.rs  theme.rs
src/formula/: mod.rs  parser.rs  tests.rs  types.rs
src/hooks/: mod.rs
src/mcp/: mod.rs  prompts.rs  resources.rs  tools.rs
src/merge_slot/: mod.rs
src/model/: mod.rs
src/output/: context.rs  theme.rs
src/query/: ast.rs  evaluator.rs  lexer.rs  mod.rs  parser.rs  tests.rs
src/recipes/: mod.rs
src/storage/: events.rs  hooks.rs  mod.rs  schema.rs  sqlite.rs  trait_.rs
src/sync/: history.rs  mod.rs  path.rs  witness.rs
src/util/: circuit_breaker.rs  credentials.rs  hash.rs  id.rs  markdown_import.rs  mod.rs  time.rs
src/validation/: mod.rs
src/worktree/: mod.rs
tests/: bench_cold_warm_start.rs  bench_contention_replay.rs  bench_synthetic_scale.rs  conformance_schema.rs  conformance_workflows.rs  e2e_basic_lifecycle.rs  e2e_claim_atomic.rs  e2e_concurrency.rs  e2e_coordination.rs  e2e_doctor_chokepoint.rs  e2e_doctor_fixture_suite.rs  e2e_env_overrides.rs  e2e_errors.rs  e2e_installer.rs  e2e_list_comprehensive.rs  e2e_orphans.rs  e2e_queries.rs  e2e_read_only_fast_open.rs  e2e_ready.rs  e2e_relations.rs  e2e_routing.rs  e2e_scheduler.rs  e2e_schema.rs  e2e_show_inherited_context.rs  e2e_slug.rs  e2e_sync_failure_injection.rs  e2e_sync_status_health.rs  e2e_upgrade.rs  e2e_version.rs  e2e_workspace_scenarios.rs  markdown_import.rs  package_manifests.rs  proptest_claim_exclusion.rs  proptest_hash.rs  proptest_jsonl_roundtrip.rs  proptest_parent_child.rs  proptest_status_partition.rs  proptest_validation.rs  repro_auto_flush_inefficiency.rs  repro_cache_crash.rs  (+16 more)
tests/common/: artifact_validator.rs  cli.rs  fixtures.rs  mod.rs  ordering.rs  scenarios.rs
tests/doctor_fixtures/: README.md  run_all.sh
tests/doctor_fixtures/audit_suspect_close_reasons/: README.md  assert.sh  corrupt.sh
tests/doctor_fixtures/base_jsonl_stale_regen/: README.md  assert.sh  corrupt.sh
tests/doctor_fixtures/base_jsonl_symlink_quarantine/: README.md  assert.sh  corrupt.sh
tests/doctor_fixtures/binary_version_mismatch/: README.md  assert.sh  corrupt.sh
tests/doctor_fixtures/blocked_cache_content_mismatch/: README.md  assert.sh  corrupt.sh
tests/doctor_fixtures/blocked_cache_stale/: README.md  assert.sh  corrupt.sh
tests/doctor_fixtures/blocked_cache_table_missing/: README.md  assert.sh  corrupt.sh
tests/doctor_fixtures/comments_orphans/: README.md  assert.sh  corrupt.sh
tests/doctor_fixtures/config_yaml_malformed/: README.md  assert.sh  corrupt.sh
tests/doctor_fixtures/config_yaml_secret_mode/: README.md  assert.sh  corrupt.sh
tests/doctor_fixtures/dependencies_orphans/: README.md  assert.sh  corrupt.sh
tests/doctor_fixtures/dirty_bitmap_orphans/: README.md  assert.sh  corrupt.sh
tests/doctor_fixtures/doctor_runs_not_creatable/: README.md  assert.sh  corrupt.sh
tests/doctor_fixtures/duplicate_config_rows/: README.md  assert.sh  corrupt.sh
tests/doctor_fixtures/duplicate_metadata_rows/: README.md  assert.sh  corrupt.sh
tests/doctor_fixtures/empty_database_with_jsonl/: README.md  assert.sh  corrupt.sh
tests/doctor_fixtures/export_hash_cache_divergence/: .skip_replay  README.md  assert.sh  corrupt.sh
tests/e2e_scripts/: concurrency_witness_logged.sh  forced_cycle_close_audit.sh  markdown_import_witness.sh  orphans_with_logging.sh  parent_child_lifecycle.sh  ready_ordering_witness.sh  slug_round_trip.sh  sync_safety_witness.sh
tests/snapshots/: golden_beads_init__init_text_contents.snap  mod.rs  robot_output.rs  schema_output.rs
(+275 files in other folders)
