[package]
name = "beads_rust"
version = "0.2.15"
edition = "2024"
rust-version = "1.88"
autobenches = false
description = "Agent-first issue tracker (SQLite + JSONL)"
license = "MIT"
repository = "https://github.com/Dicklesworthstone/beads_rust"
keywords = ["cli", "issue-tracker", "sqlite", "agent"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [
    "sample_beads_db_files/",
    ".beads/",
    ".agent-mail.yaml",
    ".github/",
    ".claude/",
    ".ntm/",
    "agent_baseline/",
    "docs/",
    "scripts/",
    "skills/",
    "temp_test/",
    "temp_test_2/",
    "refactor/",
    "*.webp",
    "*.png",
    "*.db",
    "*.db-wal",
    "*.db-shm",
]

[[bin]]
name = "br"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5.60", features = ["derive", "env", "unstable-ext"] }
clap_complete = { version = "4.6.5", features = ["unstable-dynamic"] }

# Database (pure-Rust SQLite with concurrent writer support)
# NOTE: transitive fsqlite workspace deps listed explicitly so rch syncs them
fsqlite = "0.1.7"
fsqlite-types = "0.1.7"
fsqlite-error = "0.1.7"
fsqlite-core = "0.1.7"
fsqlite-func = "0.1.7"
fsqlite-vdbe = "0.1.7"
fsqlite-vfs = "0.1.7"
fsqlite-pager = "0.1.7"
fsqlite-parser = "0.1.7"
fsqlite-planner = "0.1.7"
fsqlite-wal = "0.1.7"
fsqlite-btree = "0.1.7"
fsqlite-ast = "0.1.7"
fsqlite-mvcc = "0.1.7"
fsqlite-observability = "0.1.7"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yml = { package = "serde_norway", version = "0.9.42" }
schemars = { version = "1.0", features = ["derive", "chrono04"] }

# Time
chrono = { version = "0.4.43", features = ["serde"] }

# Hashing
sha2 = "0.11.0"
aes-gcm = "0.10"

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }

# Terminal
indicatif = "0.18.4"
crossterm = "0.29"

# Rich terminal output (sibling project). Keep syntax highlighting out of the
# release build until the upstream syntect stack drops unmaintained transitive
# crates.
rich_rust = { version = "0.2.1", features = ["markdown", "json", "backtrace"] }

# TOON format support (sibling project)
toon_rust = { version = "0.2.3", package = "tru" }

# Path normalization (strips \\?\ prefix on Windows)
dunce = "1.0.5"

# Utilities
once_cell = "1.21"
regex = "1.12"
shell-words = "1.1.1"
similar = "3.1.1"
tempfile = "3.25"
toml = "0.8"
unicode-width = "0.2.2"

# Versioning
semver = "1.0.27"

# MCP server (optional; gated behind the `mcp` feature)
fastmcp-rust = { version = "0.3.1", optional = true }

# Self-update (optional; gated behind the `self_update` feature)
self_update = { version = "0.44", features = ["reqwest", "rustls", "archive-tar", "compression-flate2"], default-features = false, optional = true }

# Cooperative shutdown so SIGINT/SIGTERM/SIGHUP unwind through main and let
# SqliteStorage::Drop flush the WAL instead of stranding frames on disk (#270).
[target.'cfg(unix)'.dependencies]
signal-hook = "0.4.4"

[target.'cfg(not(windows))'.dependencies]
mimalloc = "0.1.52"

[build-dependencies]
vergen-gix = { version = "9.1", features = ["build", "cargo", "rustc"] }

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
criterion = { version = "0.8.2", features = ["html_reports"] }
walkdir = "2.5"
insta = { version = "1.46", features = ["json", "yaml"] }
proptest = "1.10"
rand = "0.10"

[[bench]]
name = "storage_perf"
path = "benches/storage_perf.rs"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-perf]
inherits = "release"
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = false

[profile.dev]
opt-level = 1

[features]
default = ["self_update"]
mcp = ["dep:fastmcp-rust"]
self_update = [
    "dep:self_update",
    "self_update/rustls",
    "self_update/archive-tar",
    "self_update/archive-zip",
    "self_update/compression-flate2",
    "self_update/compression-zip-deflate",
]

# NOTE: no `[patch.crates-io]` here.
#
# All dependencies — fsqlite 0.1.3+, its fsqlite-* transitive crates, and
# fastmcp-rust 0.3.1+ — are published on crates.io, so this crate
# resolves everything from the registry out of the box.  That makes
# `cargo install --git https://github.com/Dicklesworthstone/beads_rust.git`
# work without requiring sibling `frankensqlite` or `fastmcp_rust`
# checkouts (issue #250 bug 1).
#
# Local co-development: contributors who want to hack on frankensqlite
# or fastmcp_rust alongside beads_rust can add a workspace-level
# `.cargo/config.toml` with their own `[patch.crates-io]` table.  See
# `scripts/dev-local-frankensqlite.toml` for a ready-to-copy template.

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
# Allow these lints to unblock CI (need higher priority than groups)
cast_precision_loss = { level = "allow", priority = 1 }
doc_markdown = { level = "allow", priority = 1 }
missing_const_for_fn = { level = "allow", priority = 1 }
uninlined_format_args = { level = "allow", priority = 1 }
useless_let_if_seq = { level = "allow", priority = 1 }
format_push_string = { level = "allow", priority = 1 }
# Stylistic nursery/pedantic lints that don't reflect real defects
option_if_let_else = { level = "allow", priority = 1 }
map_unwrap_or = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
too_long_first_doc_paragraph = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
redundant_clone = { level = "allow", priority = 1 }
struct_excessive_bools = { level = "allow", priority = 1 }
if_not_else = { level = "allow", priority = 1 }
